# apelios

./: .gitignore  ARCHITECTURE.md  README.md  TO-DOCS.md  freeze.txt  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONTEXT.md  todo.md
docs/adr/: 002-architekture.md  003-60hz-tick.md  004-stateless-input-adapter.md  005-contract.md  README.md  why_nats.md
docs/c4/: c1-apelios.drawio  c2-apelios.drawio  c3-apelios.drawio  c4-apelios.drawio  middleware-architecture.drawio  system-architecture.drawio
docu/: ba.md  devices.md  event-codes.md  evtest.md  thesis.md
docu/evdev/: event-codes.md  properties.md
docu/gui/: architecture.md
docu/modular_input/: .$system-architecture.drawio.bkp  middleware-architecture.drawio
docu/rawhid2/: hex-stream.md  raw_hid.md
examples/: video_receiver_examples.py  video_sender_examples.py
scripts/: hello_world.py  rtsp-server.py  send_artnet.py  visualizer.py
scripts/gui/: gui.py  reciever.py
scripts/raw_hid/: gyro_calibration.py  rawhid.py
scripts/stream/: ndi-reciever.py  ndi-sender.py  rtsp-client.py  webrtc-reciever.py  webrtc-sender.py
src/apelios/: __init__.py  main.py  main_deck.py  main_orchestrator.py  main_stream.py
tests/: README.md  test_integration_main_orchestrator.py  test_main_orchestrator.py  test_nats_runtime_manager.py
tests/broker/: test_broker_client.py  test_broker_runtime_manager.py  test_e2e_broker.py  test_integration_broker_client.py  test_integration_broker_runtime_manager.py  test_integration_nats_client.py  test_integration_nats_runtime_manager.py  test_nats_client.py  (+1 more)
(+50 files in other folders)
